k8s/meeting-api-gateway/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: meeting-gateway
  annotations:
    networking.gke.io/certmap: garbadge-shop-map
    networking.gke.io/static-ip: meeting-gateway-ip
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
    - name: http
      protocol: HTTP
      port: 80
